@@ -4,6 +4,10 @@
 	Martin Väth <martin at mvath.de>:
 	- Fix compilation with C++98 (regression from eix-0.32.5), see
 	  https://github.com/vaeth/eix/issues/35
+	- Make default values of MATCH_FIELD_LICENSE and MATCH_FIELD_EAPI
+	  identical to MATCH_FIELD_CATEGORY_NAME so that they never match and
+	  are de facto disabled. This hopefully avoids user confusion without
+	  breaking user configs. https://bugs.gentoo.org/show_bug.cgi?id=610424
 
 *eix-0.32.5
 	Martin Väth <martin at mvath.de>:
